
INCLUDES = 

AM_CXXFLAGS = 

bin_PROGRAMS = mp4dump mp4extract mp4info mp4trackdump mp4tags mp4art
check_PROGRAMS = mp4syncfiles

mp4dump_SOURCES = mp4dump.cpp
mp4dump_LDADD = ../libmp4v2.la 

mp4extract_SOURCES = mp4extract.cpp
mp4extract_LDADD = ../libmp4v2.la 

mp4info_SOURCES = mp4info.cpp
mp4info_LDADD = ../libmp4v2.la 

mp4trackdump_SOURCES = mp4trackdump.cpp
mp4trackdump_LDADD = ../libmp4v2.la 

mp4tags_SOURCES = mp4tags.cpp
mp4tags_LDADD = ../libmp4v2.la 

mp4art_SOURCES = mp4art.cpp
mp4art_LDADD = ../libmp4v2.la 

mp4syncfiles_SOURCES = mp4syncfiles.cpp
mp4syncfiles_LDADD = ../libmp4v2.la 

EXTRA_DIST = mp4dump60.dsp  \
	mp4info.dsp mp4tags.dsp mp4dump.vcproj mp4info.vcproj mp4tags.vcproj
